@@ -6,6 +6,8 @@
 		"omit-link-times"
 	change: compatible with Lua5.3 (along with 5.1 and 5.2)
 	change: _verbatim forced for 'exitcodes' entry.
+	change: manpage is not rebuild by default.
+		it is provided precompiled.
 	fix: ']' is not escaped for rsync rules, since rsync only applies
 	     doesn't applie pattern matching if no other pattern chars
 		 are found.
